Compiles and starts but still has bugs :)